--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="3dp"
     app:cardUseCompatPadding="true"
@@ -9,50 +10,64 @@
     >
 
     <LinearLayout
+        android:layout_margin="16dp"
+        android:layout_marginBottom="16dp"
+        android:orientation="horizontal"
+        android:layout_gravity="center_vertical"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:padding="16dp"
-        >
+        android:layout_height="wrap_content">
 
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="9"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tvMaterial"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Material"
-                android:layout_marginLeft="1dp"
                 android:fontFamily="@font/roboto"
+                android:text="Material"
                 android:textColor="#0F1051"
                 android:textSize="18sp"
-                />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tvPurchased"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Purchased"
-                android:layout_marginLeft="100dp"
                 android:fontFamily="@font/roboto"
+                android:text="Purchased"
                 android:textColor="#0F1051"
                 android:textSize="18sp"
-                />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.44"
+                app:layout_constraintStart_toEndOf="@+id/tvMaterial"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
 
             <TextView
                 android:id="@+id/tvStock"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Current Stock"
-                android:layout_marginLeft="10dp"
                 android:fontFamily="@font/roboto"
+                android:text="Current Stock"
                 android:textColor="#0F1051"
                 android:textSize="18sp"
-                />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/tvPurchased"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        </TableRow>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
