--- a/app/src/main/res/layout/activity_material__home.xml
+++ b/app/src/main/res/layout/activity_material__home.xml
@@ -35,6 +35,7 @@
                 android:text="Material"
                 android:textColor="#0F1051"
                 android:textSize="18sp"
+                android:layout_marginLeft="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.005"
