--- a/app/src/main/res/layout/activity_add_material.xml
+++ b/app/src/main/res/layout/activity_add_material.xml
@@ -37,7 +37,7 @@
             android:fontFamily="@font/roboto"
             android:gravity="center"
             android:padding="5dp"
-            android:text="RECEIVED MATERIAL"
+            android:text="Received Material"
             android:textColor="#FFFFFFFF"
             android:textSize="24sp"
             android:textStyle="bold"
