--- a/app/src/main/res/layout/activity_used__material.xml
+++ b/app/src/main/res/layout/activity_used__material.xml
@@ -60,7 +60,7 @@
             android:fontFamily="@font/roboto"
             android:gravity="center"
             android:padding="5dp"
-            android:text="USED MATERIAL"
+            android:text="Used Material"
             android:textColor="#FFFFFFFF"
             android:textSize="24sp"
             android:textStyle="bold"
